--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -1,7 +1,7 @@
 name: Scheduled Merge Remote Action
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '5 * * * *'
 
 jobs:
   merge-upstream:
